add name attribs

--- a/templates/_layouts/_header.html
+++ b/templates/_layouts/_header.html
@@ -26,8 +26,8 @@
       {% if path.startswith('/docs') %}
       <form class="p-search-box" action="/docs/search">
         <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
-        <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right"><i class="p-icon--close"></i></button>
-        <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
+        <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right" name="close"><i class="p-icon--close"></i></button>
+        <button type="submit" class="p-search-box__button" name="submit"><i class="p-icon--search"></i></button>
       </form>
       {% endif %}
     </nav>
