--- a/templates/docs/examples/base/forms/checkboxes.html
+++ b/templates/docs/examples/base/forms/checkboxes.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <form>
-  <input type="checkbox" id="checkExample1" checked>
+  <input type="checkbox" id="checkExample1" name="checkExample1" checked>
   <label for="checkExample1">HTML</label>
-  <input type="checkbox" id="checkExample2">
+  <input type="checkbox" id="checkExample2" name="checkExample2">
   <label for="checkExample2">CSS</label>
-  <input type="checkbox" id="checkExample3" disabled="disabled">
+  <input type="checkbox" id="checkExample3" name="checkExample3" disabled="disabled">
   <label for="checkExample3">PHP</label>
 </form>
 {% endblock %}
