--- a/templates/docs/examples/base/forms/disabled-input.html
+++ b/templates/docs/examples/base/forms/disabled-input.html
@@ -6,6 +6,6 @@
 {% block content %}
 <form>
     <label for="disabled-input">Email address</label>
-    <input type="text" id="disabled-input" placeholder="example@canonical.com" disabled="disabled">
+    <input type="text" id="disabled-input" name="disabled-input" placeholder="example@canonical.com" disabled="disabled">
 </form>
 {% endblock %}
