--- a/templates/docs/examples/base/forms/fieldset.html
+++ b/templates/docs/examples/base/forms/fieldset.html
@@ -7,11 +7,11 @@
 <form>
   <fieldset>
     <label for="list-input-1">First name</label>
-    <input placeholder="Joe" id="list-input-1" type="text">
+    <input placeholder="Joe" id="list-input-1" name="list-input-1" type="text">
     <label for="list-input-2">Last name</label>
-    <input placeholder="Bloggs" id="list-input-2" type="text">
+    <input placeholder="Bloggs" id="list-input-2" name="list-input-2" type="text">
     <label for="list-input-3">Email address</label>
-    <input placeholder="example@canonical.com" id="list-input-3" type="text">
+    <input placeholder="example@canonical.com" id="list-input-3" name="list-input-3" type="text">
   </fieldset>
 </form>
 {% endblock %}
