--- a/templates/docs/examples/patterns/forms/dense.html
+++ b/templates/docs/examples/patterns/forms/dense.html
@@ -6,11 +6,11 @@
 {% block content %}
 <form>
   <label for="username">Username</label>
-  <input type="text" id="username" class="is-dense" required>
+  <input type="text" id="username" name="username" class="is-dense" required>
   <label for="address2">Email address</label>
-  <input type="text" id="address2" class="is-dense" required>
+  <input type="text" id="address2" name="address2" class="is-dense" required>
   <label for="exampleSelect">Ubuntu releases</label>
-  <select name="exampleSelect" id="exampleSelect" class="is-dense">
+  <select name="exampleSelect" id="exampleSelect" name="exampleSelect" class="is-dense">
     <option value="" disabled="disabled" selected>Select an option</option>
     <option value="1">Cosmic Cuttlefish</option>
     <option value="2">Bionic Beaver</option>
