--- a/templates/docs/examples/patterns/forms/form-help-text.html
+++ b/templates/docs/examples/patterns/forms/form-help-text.html
@@ -6,7 +6,7 @@
 {% block content %}
 <form>
   <label for="exampleTextInputHelp">Email address</label>
-  <input class="p-form-validation__input" type="text" id="exampleTextInputHelp" placeholder="example@canonical.com" />
+  <input class="p-form-validation__input" type="text" id="exampleTextInputHelp" name="exampleTextInputHelp" placeholder="example@canonical.com" />
   <p class="p-form-help-text">
     A notification email will be sent to entered email address.
   </p>
