--- a/templates/docs/examples/patterns/forms/form-inline.html
+++ b/templates/docs/examples/patterns/forms/form-inline.html
@@ -8,7 +8,7 @@
   <div class="p-form__group">
     <label for="username-inline" class="p-form__label">Username</label>
     <div class="p-form__control u-clearfix">
-      <input type="text" id="username-inline" class="p-form__control" required>
+      <input type="text" id="username-inline" name="username-inline" class="p-form__control" required>
       <p class="p-form-help-text">
         30 characters or fewer.
       </p>
@@ -17,7 +17,7 @@
   <div class="p-form__group p-form-validation is-error">
     <label for="address-inline2" class="p-form__label">Email address</label>
     <div class="p-form__control u-clearfix">
-      <input type="text" id="address-inline2" class="p-form-validation__input" required aria-invalid="true" aria-describedby="input-error-message-inline">
+      <input type="text" id="address-inline2" name="address-inline2" class="p-form-validation__input" required aria-invalid="true" aria-describedby="input-error-message-inline">
       <p class="p-form-validation__message" id="input-error-message-inline" role="alert">
         <strong>Error:</strong> Please enter a valid email address.
       </p>
