--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -10,32 +10,32 @@
   <div class="col-6">
     <h3>Base checkbox</h3>
 
-    <input type="checkbox" id="checkExampleBase">
+    <input type="checkbox" id="checkExampleBase" name="checkExampleBase">
     <label for="checkExampleBase">checkbox</label>
 
-    <input type="checkbox" id="checkExampleBaseChecked" checked>
+    <input type="checkbox" id="checkExampleBaseChecked" name="checkExampleBaseChecked" checked>
     <label for="checkExampleBaseChecked">checked</label>
 
-    <input type="checkbox" id="checkExampleBaseDisabled" disabled>
+    <input type="checkbox" id="checkExampleBaseDisabled" name="checkExampleBaseDisabled" disabled>
     <label for="checkExampleBaseDisabled">disabled</label>
 
-    <input type="checkbox" id="checkExampleBaseRequired" required>
+    <input type="checkbox" id="checkExampleBaseRequired" name="checkExampleBaseRequired" required>
     <label class="is-required" for="checkExampleBaseRequired">required</label>
 
-    <input type="checkbox" id="checkExampleBaseH1">
+    <input type="checkbox" id="checkExampleBaseH1" name="checkExampleBaseH1">
     <label class="is-h1" for="checkExampleBaseH1">.is-h1</label>
 
-    <input type="checkbox" id="checkExampleBaseH2">
+    <input type="checkbox" id="checkExampleBaseH2" name="checkExampleBaseH2">
     <label class="is-h2" for="checkExampleBaseH2">.is-h2</label>
 
-    <input type="checkbox" id="checkExampleBaseH3">
+    <input type="checkbox" id="checkExampleBaseH3" name="checkExampleBaseH3">
     <label class="is-h3" for="checkExampleBaseH3">.is-h3</label>
 
-    <input type="checkbox" id="checkExampleBaseH4">
+    <input type="checkbox" id="checkExampleBaseH4" name="checkExampleBaseH4">
     <label class="is-h4" for="checkExampleBaseH4">.is-h4</label>
 
     <p>
-      <input type="checkbox" id="checkExampleBaseInline">
+      <input type="checkbox" id="checkExampleBaseInline" name="checkExampleBaseInline">
       <label class="is-inline-label" for="checkExampleBaseInline">.is-inline-label</label>
       alongside some text
     </p>
@@ -44,7 +44,7 @@
       <thead>
         <tr>
           <th>
-            <input type="checkbox" id="checkExampleBaseTable">
+            <input type="checkbox" id="checkExampleBaseTable" name="checkExampleBaseTable">
             <label class="is-table-header" for="checkExampleBaseTable">.is-table-header</label>
           </th>
           <th>
@@ -55,7 +55,7 @@
       <tbody>
         <tr>
           <td>
-            <input type="checkbox" id="checkExampleBaseTableCell">
+            <input type="checkbox" id="checkExampleBaseTableCell" name="checkExampleBaseTableCell">
             <label class="is-inline-label" for="checkExampleBaseTableCell">.is-inline-label</label>
           </td>
           <td>
@@ -66,12 +66,12 @@
     </table>
 
     <p class="p-muted-heading">
-      <input type="checkbox" id="checkExampleBaseMuted">
+      <input type="checkbox" id="checkExampleBaseMuted" name="checkExampleBaseMuted">
       <label class="is-muted-heading" for="checkExampleBaseMuted">.is-muted-heading</label>
     </p>
 
     <p>
-      <input type="checkbox" id="checkExampleBaseInlineMuted">
+      <input type="checkbox" id="checkExampleBaseInlineMuted" name="checkExampleBaseInlineMuted">
       <label class="is-muted-inline-heading" for="checkExampleBaseInlineMuted">.is-muted-inline-heading</label>
       alongside some text
     </p>
@@ -92,7 +92,7 @@
     <p class="p-muted-heading">
       <label class="p-checkbox--inline">
         <input type="checkbox" class="p-checkbox__input" aria-labelledby="checkboxLabel1"/>
-        <span class="p-checkbox__label" id="checkboxLabel1">.p-checkbox--inline in .p-muted-heading</span>
+        <span class="p-checkbox__label" id="checkboxLabel1" name="checkboxLabel1">.p-checkbox--inline in .p-muted-heading</span>
       </label>
     </p>
 
@@ -100,7 +100,7 @@
       <span class="p-muted-heading">
         <label class="p-checkbox--inline">
           <input type="checkbox" class="p-checkbox__input" aria-labelledby="checkboxLabel2"/>
-          <span class="p-checkbox__label" id="checkboxLabel2">.p-checkbox--inline in .p-muted-heading</span>
+          <span class="p-checkbox__label" id="checkboxLabel2" name="checkboxLabel2">.p-checkbox--inline in .p-muted-heading</span>
         </label>
       </span>
       alongside text
@@ -117,32 +117,32 @@
   <div class="col-6">
     <h3>Base radio</h3>
 
-    <input type="radio" id="radioExampleBase" name="radioBase">
+    <input type="radio" id="radioExampleBase" name="radioExampleBase" name="radioBase">
     <label for="radioExampleBase">radio</label>
 
-    <input type="radio" id="radioExampleBaseChecked" name="radioBase" checked>
+    <input type="radio" id="radioExampleBaseChecked" name="radioExampleBaseChecked" name="radioBase" checked>
     <label for="radioExampleBaseChecked">checked</label>
 
-    <input type="radio" id="radioExampleBaseDisabled" name="radioBase" disabled>
+    <input type="radio" id="radioExampleBaseDisabled" name="radioExampleBaseDisabled" name="radioBase" disabled>
     <label for="radioExampleBaseDisabled">disabled</label>
 
-    <input type="radio" id="radioExampleBaseRequired" name="radioBase" required>
+    <input type="radio" id="radioExampleBaseRequired" name="radioExampleBaseRequired" name="radioBase" required>
     <label class="is-required" for="radioExampleBaseRequired">required</label>
 
-    <input type="radio" id="radioExampleBaseH1" name="radioBase">
+    <input type="radio" id="radioExampleBaseH1" name="radioExampleBaseH1" name="radioBase">
     <label class="is-h1" for="radioExampleBaseH1">.is-h1</label>
 
-    <input type="radio" id="radioExampleBaseH2" name="radioBase">
+    <input type="radio" id="radioExampleBaseH2" name="radioExampleBaseH2" name="radioBase">
     <label class="is-h2" for="radioExampleBaseH2">.is-h2</label>
 
-    <input type="radio" id="radioExampleBaseH3" name="radioBase">
+    <input type="radio" id="radioExampleBaseH3" name="radioExampleBaseH3" name="radioBase">
     <label class="is-h3" for="radioExampleBaseH3">.is-h3</label>
 
-    <input type="radio" id="radioExampleBaseH4" name="radioBase">
+    <input type="radio" id="radioExampleBaseH4" name="radioExampleBaseH4" name="radioBase">
     <label class="is-h4" for="radioExampleBaseH4">.is-h4</label>
 
     <p>
-      <input type="radio" id="radioExampleBaseInline" name="radioBase">
+      <input type="radio" id="radioExampleBaseInline" name="radioExampleBaseInline" name="radioBase">
       <label class="is-inline-label" for="radioExampleBaseInline">.is-inline-label</label>
       alongside some text
     </p>
@@ -151,7 +151,7 @@
       <thead>
         <tr>
           <th>
-            <input type="radio" id="radioExampleBaseTable" name="radioBase">
+            <input type="radio" id="radioExampleBaseTable" name="radioExampleBaseTable" name="radioBase">
             <label class="is-table-header" for="radioExampleBaseTable">.is-table-header</label>
           </th>
           <th>
@@ -162,7 +162,7 @@
       <tbody>
         <tr>
           <td>
-            <input type="radio" id="radioExampleBaseTableCell" name="radioBase">
+            <input type="radio" id="radioExampleBaseTableCell" name="radioExampleBaseTableCell" name="radioBase">
             <label class="is-inline-label" for="radioExampleBaseTableCell">.is-inline-label</label>
           </td>
           <td>
@@ -173,12 +173,12 @@
     </table>
 
     <p class="p-muted-heading">
-      <input type="radio" id="radioExampleBaseMuted" name="radioBase">
+      <input type="radio" id="radioExampleBaseMuted" name="radioExampleBaseMuted" name="radioBase">
       <label class="is-muted-heading" for="radioExampleBaseMuted">.is-muted-heading</label>
     </p>
 
     <p>
-      <input type="radio" id="radioExampleBaseInlineMuted" name="radioBase">
+      <input type="radio" id="radioExampleBaseInlineMuted" name="radioExampleBaseInlineMuted" name="radioBase">
       <label class="is-muted-inline-heading" for="radioExampleBaseInlineMuted">.is-muted-inline-heading</label>
       alongside some text
     </p>
@@ -199,7 +199,7 @@
     <p class="p-muted-heading">
       <label class="p-radio--inline">
         <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioLabel1"/>
-        <span class="p-radio__label" id="radioLabel1">.p-radio--inline in .p-muted-heading</span>
+        <span class="p-radio__label" id="radioLabel1" name="radioLabel1">.p-radio--inline in .p-muted-heading</span>
       </label>
     </p>
 
@@ -207,7 +207,7 @@
       <span class="p-muted-heading">
         <label class="p-radio--inline">
           <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioLabel2"/>
-          <span class="p-radio__label" id="radioLabel2">.p-radio--inline in .p-muted-heading</span>
+          <span class="p-radio__label" id="radioLabel2" name="radioLabel2">.p-radio--inline in .p-muted-heading</span>
         </label>
       </span>
       alongside text
