--- a/templates/docs/examples/templates/firefox-grid-table-bug.html
+++ b/templates/docs/examples/templates/firefox-grid-table-bug.html
@@ -15,7 +15,7 @@
         <tr>
           <th>
             <form>
-              <input type="checkbox" id="checkExample5" checked="">
+              <input type="checkbox" id="checkExample5" name="checkExample5" checked="">
               <label for="checkExample5" class="is-inline-label">label</label>
             </form>
           </th>
@@ -32,7 +32,7 @@
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="checkbox" id="checkExample6" checked="">
+              <input type="checkbox" id="checkExample6" name="checkExample6" checked="">
               <label for="checkExample6" class="is-inline-label">label</label>
             </form>
           </th>
@@ -47,7 +47,7 @@
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="radio" name="RadioOptions" id="Radio5" value="option1" checked>
+              <input type="radio" id="Radio5" name="Radio5" value="option1" checked>
               <label for="Radio5" class="is-inline-label">label</label>
             </form>
           </th>
