--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -45,9 +45,10 @@
 <section id="search-docs" class="p-strip--image is-shallow" style="background-image: url('https://assets.ubuntu.com/v1/e54487e2-maas-docs-suru.png')">
   <div class="row">
     <form class="p-search-box u-no-margin--bottom">
-      <input type="search" class="p-search-box__input" name="q" placeholder="Search documentation" required="" />
-      <button type="reset" class="p-search-box__reset"><i class="p-icon--close">Close</i></button>
-      <button type="submit" class="p-search-box__button"><i class="p-icon--search">Search</i></button>
+      <input aria-label="search" type="search" class="p-search-box__input" name="q" placeholder="Search documentation" required="" />
+      <button type="reset" class="p-search-box__reset" name="close"><i class="p-icon--close">Close</i></button>
+      <button type="submit" name="submitSearch" class="p-search-box__button"><i class="p-icon--search">Search</i></button>
+
     </form>
   </div>
 </section>
