--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -169,11 +169,11 @@
         </div>
         <div class="row">
           <div class="col-2">
-            <label>Language:</label>
+            <label for="select-language">Language:</label>
           </div>
           <div class="col-7">
             <form class="p-form--inline js-language-select">
-              <select name="language">
+              <select id="select-language" name="language">
                   <option value="de">Deutsch</option>
                   <option value="en" selected="">English</option>
                   <option value="es">Español</option>
