--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -10,10 +10,10 @@
     <div class="row">
       <div class="col-3">
         <form>
-          <input type="checkbox" id="checkExample2">
-          <label for="checkExample2">Checkbox option 2</label>
-          <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
-          <label for="Radio1">Radio option 1</label>
+          <input type="checkbox" id="checkExample0" name="checkExample0">
+          <label for="checkExample0">Checkbox option 2</label>
+          <input type="radio" name="RadioOptions0" id="Radio0" value="option1" checked>
+          <label for="Radio0">Radio option 0</label>
         </form>
       </div>
       <div class="col-3">
@@ -32,7 +32,7 @@
       <div class="col-3">
         <form>
           <input type="text">
-          <input type="checkbox" id="checkExample1" checked>
+          <input type="checkbox" id="checkExample1" name="checkExample1" checked>
           <label for="checkExample1">Checkbox option 1</label>
         </form>
       </div>
@@ -43,21 +43,21 @@
         </form>
       </div>
       <div class="col-3">
-        <input type="checkbox" id="checkExample2a">
-        <label for="checkExample2a">Checkbox option 2</label>
-        <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+        <input type="checkbox" id="checkExample2" name="checkExample2">
+        <label for="checkExample2">Checkbox option 2</label>
+        <input type="radio" name="RadioOptions1" id="Radio1" value="option1" checked>
         <label for="Radio1">Radio option 1</label>
-        <input type="radio" name="RadioOptions" id="Radio2" value="option2">
+        <input type="radio" name="RadioOptions2" id="Radio2" value="option2">
         <label for="Radio2">Radio option 2</label>
       </div>
       <div class="col-3">
-        <input type="radio" name="RadioOptions" id="Radio3" value="option3" >
+        <input type="radio" name="RadioOptions3" id="Radio3" value="option3">
         <label for="Radio3">Radio option 3</label>
-        <input type="radio" name="RadioOptions" id="Radio4" value="option4">
+        <input type="radio" name="RadioOptions4" id="Radio4" value="option4">
         <label for="Radio4">Radio option 4</label>
-        <input type="checkbox" id="checkExample3" checked>
+        <input type="checkbox" id="checkExample3" name="checkExample3" checked>
         <label for="checkExample3">Checkbox option 3</label>
-        <input type="checkbox" id="checkExample4">
+        <input type="checkbox" id="checkExample4" name="checkExample4">
         <label for="checkExample4">Checkbox option 4</label>
       </div>
     </div>
@@ -77,7 +77,7 @@
         <tr>
           <th>
             <form>
-              <input type="checkbox" id="checkExample5" checked="">
+              <input type="checkbox" id="checkExample5" name="checkExample5" checked="">
               <label for="checkExample5" class="is-inline-label">label</label>
             </form>
           </th>
@@ -94,7 +94,7 @@
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="checkbox" id="checkExample6" checked="">
+              <input type="checkbox" id="checkExample6" name="checkExample6" checked="">
               <label for="checkExample6" class="is-inline-label">label</label>
             </form>
           </th>
@@ -109,7 +109,7 @@
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="radio" name="RadioOptions" id="Radio5" value="option1" checked>
+              <input type="radio" name="RadioOptions5" id="Radio5" value="option5" checked>
               <label for="Radio5" class="is-inline-label">label</label>
             </form>
           </th>
