--- a/templates/docs/examples/base/forms/input.html
+++ b/templates/docs/examples/base/forms/input.html
@@ -6,6 +6,6 @@
 {% block content %}
 <form>
   <label for="exampleTextInput">Email address</label>
-  <input type="text" id="exampleTextInput" placeholder="example@canonical.com" />
+  <input type="text" id="exampleTextInput" name="exampleTextInput" placeholder="example@canonical.com" />
 </form>
 {% endblock %}
