--- a/templates/docs/examples/base/forms/labels.html
+++ b/templates/docs/examples/base/forms/labels.html
@@ -6,10 +6,10 @@
 {% block content %}
 <form>
   <label for="exampleTextInput">Email address</label>
-  <input type="text" id="exampleTextInput" placeholder="example@canonical.com" />
+  <input type="text" id="exampleTextInput" name="exampleTextInput" placeholder="example@canonical.com" />
   <label for="textarea">Tell us about your project or interest</label>
-  <textarea id="textarea" rows="3">Ubuntu</textarea>
+  <textarea id="textarea" name="textarea" rows="3">Ubuntu</textarea>
   <label for="textarea2">Data privay</label>
-  <textarea id="textarea2" rows="3" readonly="readonly">Read-only</textarea>
+  <textarea id="textarea2" name="textarea2" rows="3" readonly="readonly">Read-only</textarea>
 </form>
 {% endblock %}
