--- a/templates/docs/examples/base/forms/radio-buttons.html
+++ b/templates/docs/examples/base/forms/radio-buttons.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <form>
-  <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+  <input type="radio" name="RadioOptions1" id="Radio1" value="option1" checked>
   <label for="Radio1">Linux</label>
-  <input type="radio" name="RadioOptions" id="Radio2" value="option2">
+  <input type="radio" name="RadioOptions2" id="Radio2" value="option2">
   <label for="Radio2">Mac OS</label>
-  <input type="radio" name="RadioOptions" id="Radio4" value="option4" disabled="disabled">
+  <input type="radio" name="RadioOptions3" id="Radio4" value="option4" disabled="disabled">
   <label for="Radio4">Windows</label>
 </form>
 {% endblock %}
