--- a/templates/docs/examples/base/forms/select-multiple.html
+++ b/templates/docs/examples/base/forms/select-multiple.html
@@ -6,7 +6,7 @@
 {% block content %}
 <form>
   <label for="exampleSelectMulti">Ubuntu releases</label>
-  <select name="exampleSelectMulti" id="exampleSelectMulti" multiple>
+  <select name="exampleSelectMulti" id="exampleSelectMulti" name="exampleSelectMulti" multiple>
     <option value="" disabled="disabled">Select...</option>
     <option value="1">Cosmic Cuttlefish</option>
     <option value="2">Bionic Beaver</option>
