--- a/templates/docs/examples/base/forms/selects.html
+++ b/templates/docs/examples/base/forms/selects.html
@@ -6,7 +6,7 @@
 {% block content %}
 <form>
   <label for="exampleSelect">Ubuntu releases</label>
-  <select name="exampleSelect" id="exampleSelect">
+  <select name="exampleSelect" id="exampleSelect" name="exampleSelect">
     <option value="" disabled="disabled" selected>Select an option</option>
     <option value="1">Cosmic Cuttlefish</option>
     <option value="2">Bionic Beaver</option>
