--- a/templates/docs/examples/base/forms/textarea.html
+++ b/templates/docs/examples/base/forms/textarea.html
@@ -6,6 +6,6 @@
 {% block content %}
 <form>
     <label for="textarea">Tell us about your project or interest</label>
-    <textarea id="textarea" rows="3">Ubuntu</textarea>
+    <textarea id="textarea" name="textarea" rows="3">Ubuntu</textarea>
 </form>
 {% endblock %}
