--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -41,8 +41,9 @@
   <div class="row">
     <form class="p-search-box u-no-margin--bottom">
       <input type="search" class="p-search-box__input" name="q" placeholder="Search documentation" required="" />
-      <button type="reset" class="p-search-box__reset"><i class="p-icon--close">Close</i></button>
-      <button type="submit" class="p-search-box__button"><i class="p-icon--search">Search</i></button>
+      <button type="reset" class="p-search-box__reset" name="close"><i class="p-icon--close">Close</i></button>
+      <button type="submit" name="submitSearch" class="p-search-box__button"><i class="p-icon--search">Search</i></button>
+
     </form>
   </div>
 </section>
