--- a/templates/docs/examples/patterns/forms/_form-stacked.html
+++ b/templates/docs/examples/patterns/forms/_form-stacked.html
@@ -7,7 +7,7 @@
 
     <div class="col-8">
       <div class="p-form__control">
-        <input type="text" id="full-name-stacked" required>
+        <input type="text" id="full-name-stacked" name="fullName" required>
       </div>
     </div>
   </div>
@@ -19,7 +19,7 @@
 
     <div class="col-8">
       <div class="p-form__control">
-        <input type="text" id="username-stacked">
+        <input type="text" id="username-stacked" name="username-stacked">
         <p class="p-form-help-text">
           30 characters or fewer.
         </p>
@@ -34,7 +34,7 @@
 
     <div class="col-8">
       <div class="p-form__control">
-        <input type="text" id="username-stacked-error" class="p-form-validation__input" aria-invalid="true"
+        <input type="text" id="username-stacked-error" name="username-stackederror" class="p-form-validation__input" aria-invalid="true"
           aria-describedby="username-error-message-stacked">
         <p class="p-form-validation__message" id="username-error-message-stacked" role="alert">
           <strong>Error:</strong> This field is required.
@@ -50,7 +50,7 @@
 
     <div class="col-8">
       <div class="p-form__control">
-        <input type="text" id="address-optional-stacked">
+        <input type="text" id="address-optional-stacked" name="address-optional-stacked">
       </div>
     </div>
   </div>
@@ -62,7 +62,7 @@
 
     <div class="col-8">
       <div class="p-form__control">
-        <input type="text" id="address-optional-stacked">
+        <input type="text" id="address-optional-stacked" name="address-optional-stacked">
       </div>
     </div>
   </div>
