--- a/scss/_patterns_list-tree.scss
+++ b/scss/_patterns_list-tree.scss
@@ -28,10 +28,12 @@
       display: none;
       margin-left: 0;
 
+      // TODO: is-expanded
       &[aria-hidden='false'] {
         display: block;
       }
 
+      // TODO: is-expanded
       &[aria-hidden='false']::after {
         @extend %list-tree-icon;
 
