--- a/scss/_patterns_table-expanding.scss
+++ b/scss/_patterns_table-expanding.scss
@@ -41,6 +41,7 @@
         flex-basis: 100%;
         max-width: 100%;
 
+        &.is-closed,
         &[aria-hidden='true'] {
           display: none;
         }
