--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -45,6 +45,7 @@
         width: 100%;
         word-break: break-word;
 
+        // Style aria-label content as heading on small screens
         &[aria-label] {
           text-align: right;
         }
