--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -86,6 +86,7 @@
         }
       }
 
+      &.is-active,
       &:hover,
       &[aria-selected='true'] {
         @include vf-highlight-bar($color-tabs-active-bar, bottom, false);
